# autonoma

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  README.md  autonoma.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
autonoma/: __main__.py  alerts.py  config.py  logs.py  main.py  runtime.py  schema.py  tui.py
autonoma/connectors/: __init__.py  base.py  oauth.py  registry.py  token_store.py
autonoma/connectors/github/: __init__.py  connector.py  tools.py
autonoma/connectors/google_calendar/: __init__.py  connector.py  tools.py
autonoma/connectors/google_contacts/: __init__.py  connector.py  tools.py
autonoma/connectors/google_meet/: __init__.py  connector.py  tools.py
autonoma/connectors/onedrive/: __init__.py  connector.py  tools.py
autonoma/cortex/: agent.py  contact_enricher.py  contacts.py  context.py  followup_scheduler.py  identity.py  loop.py  router.py  session.py  state_machine.py  trace_store.py  triage.py
autonoma/executor/: cron.py  path_safety.py  sandbox.py  task_queue.py  tool_runner.py
autonoma/executor/backends/: __init__.py  base.py  direct.py  docker.py
autonoma/executor/tools/: base.py  file_ops.py  shell.py  web_search.py
autonoma/gateway/: auth.py  proxy_health.py  router.py  server.py
autonoma/gateway/channels/: _discord_gateway.py  _http_server.py  _util.py  base.py  cli.py  connectors_api.py  dashboard_api.py  discord_channel.py  gmail.py  rest.py  telegram.py  whatsapp.py
autonoma/memory/: __init__.py  consolidation.py  database.py  embeddings.py  flush.py  retrieval.py  store.py
autonoma/models/: __init__.py  anthropic.py  openrouter.py  pricing.py  provider.py
autonoma/observability/: __init__.py  metrics.py  otel.py
autonoma/skills/: loader.py  registry.py
dashboard/: .npmignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
dashboard/src/components/: AlertsPanel.tsx  ChannelHealthBadge.tsx  ChatPanel.tsx  ConfirmDialog.tsx  Dropdown.tsx  EmptyState.tsx  LiveLogStream.tsx  MemoryTable.tsx  ProxyHealthCard.tsx  SessionDetail.tsx  SessionList.tsx  Sidebar.tsx  Skeleton.tsx  StatsCard.tsx  ThemeToggle.tsx  (+3 more)
scripts/: install.js  prepack.js  prepublish-check.js
tests/: test_connector_github.py  test_connector_google_contacts.py  test_connector_google_meet.py  test_contacts.py  test_identity_github.py  test_state_machine.py
whatsapp-bridge/: index.js  package-lock.json  package.json
workspace/: IDENTITY.md  MEMORY.md  SOUL.md
(+14 files in other folders)
